--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Event Name | Toronto Hacker Club</title>
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="http://torontohacker.club/images/favicon.ico" type="image/x-icon">
 		<!-- css files -->
 		<!-- bootstrap css file -->
-		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="http://torontohacker.club/css/bootstrap.min.css">
 		<!-- fontawesome css file -->
-		<link rel="stylesheet" href="css/font-awesome.css">
+		<link rel="stylesheet" href="http://torontohacker.club/css/font-awesome.css">
 		<!-- custom css file -->
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="http://torontohacker.club/css/style.css">
 	</head>
 	<body>
 		<!-- main nav bar -->
 		<nav id="main-nav">
 			<div class="container">
-				<a href="index.html"><img id="nav-logo" src="images/logo-ac.png" alt="logo"></a>
+				<a href="index.html"><img id="nav-logo" src="http://torontohacker.club/images/logo-ac.png" alt="logo"></a>
 		  	</div>
 		</nav>
 		<!-- header -->
@@ -55,28 +55,28 @@
 						<div class="sponsor-logos">
 							<div class="row">
 								<div class="col-xs-12 platinum">
-									<a href="http://www.rbcroyalbank.com" target="_blank"><img class=""src="images/sponsors/rbc.png" /></a>
+									<a href="http://www.rbcroyalbank.com" target="_blank"><img class=""src="http://torontohacker.club/images/sponsors/rbc.png" /></a>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-xs-12 gold">
-									<a href="http://www.rbcroyalbank.com" target="_blank"><img class=""src="images/sponsors/rbc.png" /></a>
+									<a href="http://www.rbcroyalbank.com" target="_blank"><img class=""src="http://torontohacker.club/images/sponsors/rbc.png" /></a>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-xs-12 silver">
-									<a href="http://www.rbcroyalbank.com" target="_blank"><img class=""src="images/sponsors/rbc.png" /></a>
+									<a href="http://www.rbcroyalbank.com" target="_blank"><img class=""src="http://torontohacker.club/images/sponsors/rbc.png" /></a>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-xs-12 bronze">
-									<a href="http://www.rbcroyalbank.com" target="_blank"><img class=""src="images/sponsors/rbc.png" /></a>
+									<a href="http://www.rbcroyalbank.com" target="_blank"><img class=""src="http://torontohacker.club/images/sponsors/rbc.png" /></a>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-sm-2"></div>
 								<div class="col-sm-8 other">
-									<a href="http://www.rbcroyalbank.com" target="_blank"><img class=""src="images/sponsors/rbc.png" /></a>
+									<a href="http://www.rbcroyalbank.com" target="_blank"><img class=""src="http://torontohacker.club/images/sponsors/rbc.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -120,8 +120,8 @@
 			</div>
 		</div>
 		<!-- jquery script -->
-		<script src="js/jquery-3.1.1.min.js"></script>
+		<script src="http://torontohacker.club/js/jquery-3.1.1.min.js"></script>
 		<!-- custom script file -->
-		<script src="js/single-blog.js"></script>
+		<script src="http://torontohacker.club/js/single-blog.js"></script>
 	</body>
 </html>
