--- a/index.html
+++ b/index.html
@@ -22,20 +22,9 @@
 				<a href="index.html"><img id="nav-logo" src="http://torontohacker.club/images/logo-ac.png" alt="logo"></a>
 		  	</div>
 		</nav>
-		<!-- header -->
-		<div class="s-header">
-			<div class="container">
-				<h1>Event Name</h1>
-				<h4>Event Purpose</h4>
-			</div>
-		</div>
-		<!-- content -->
 		<section class="content">
 			<div class="container">
 				<div class="main-blog col-md-8">
-					<h2>Event Name</h2>
-					<div class="desc">
-					</div>
 					<!--cover picture here-->
 					<div class="img-con">
 						<img src="http://placehold.it/610x450" alt="blog1">
@@ -85,12 +74,12 @@
 
 				<div class="s-right col-md-4">
 					<div class="recent-posts">
-						<h3>Brief Overview</h3>
+						<h3>Details</h3>
 						<ul class="liround clearfix">
 							<li>
 								<i class="fa fa-calendar-o" aria-hidden="true"></i>
 								<h4>Date</h4>
-								<span>DD/MM/YYYY - DD/MM/YYYY</span>
+								<span>Day Month, Year</span>
 							</li>
 							<li>
 								<i class="fa fa-clock-o" aria-hidden="true"></i>
@@ -105,7 +94,7 @@
 						</ul>
 					</div>
 					<br>
-					<a href="" target="_blank" class="button">Registration</a>
+					<a href="" target="_blank" class="button">Register Now</a>
 					<br>
 					<br>
 					<a href="" target="_blank" class="button"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook Event</a>
@@ -123,5 +112,13 @@
 		<script src="http://torontohacker.club/js/jquery-3.1.1.min.js"></script>
 		<!-- custom script file -->
 		<script src="http://torontohacker.club/js/single-blog.js"></script>
+		<script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-78821319-1', 'auto');
+      ga('send', 'pageview');
+  	</script>
 	</body>
 </html>
