--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<a href="" target="_blank" class="button">Register Now</a>
 					<br>
 					<br>
-					<a href="" target="_blank" class="button"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook Event</a>
+					<a href="" target="_blank" class="button" style="margin-left:20px"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 				</div>
 			</div>
 		</section>
